--- a/manifest.json
+++ b/manifest.json
@@ -2,17 +2,19 @@
   "manifest_version": 3,
   "name": "Equality Compass",
   "version": "1.0",
-  "description": "Colors job posting states based on the score assigned by the Movement Advancement Project.",
-  "permissions": ["activeTab", "scripting"],
+  "description": "Highlight states on LinkedIn job listings with Primary or Secondary scoring.",
+  "permissions": ["storage"],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "48": "icon.png"
+    }
+  },
   "content_scripts": [
     {
       "matches": ["*://*.linkedin.com/jobs*"],
-      "js": ["stateScores.js", "content.js"],
-      "css": ["styles.css"]
+      "js": ["content.js"],
+      "run_at": "document_idle"
     }
-  ],
-  "host_permissions": ["<all_urls>"],
-  "action": {
-    "default_title": "Equality Compass"
-  }
+  ]
 }
