--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Equality Compass",
-  "version": "2.0.0",
-  "description": "Highlight states on LinkedIn job listings with Primary or Secondary scoring.",
+  "version": "2.0.1",
+  "description": "Highlight states on LinkedIn and Indeed job listings with M.A.P. Total Policy Tally or Gender Identity scoring.",
   "permissions": ["storage"],
   "action": {
     "default_popup": "popup.html",
