--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://*.linkedin.com/jobs*"],
+      "matches": ["*://*.linkedin.com/jobs*", "*://*.indeed.com"],
       "js": ["content.js"],
       "run_at": "document_idle"
     }
