--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Equality Compass",
-  "version": "0.15.0",
+  "version": "0.16.0",
   "description": "Highlight states on LinkedIn and Indeed job listings with M.A.P. Total Policy Tally or Gender Identity scoring.",
   "permissions": ["storage"],
   "action": {
@@ -14,7 +14,7 @@
   "content_scripts": [
     {
       "matches": ["*://*.linkedin.com/jobs*", "*://*.indeed.com/*", "*://*.ziprecruiter.com/*"],
-      "js": ["content.js"],
+      "js": ["stateScores.js", "content.js"],
       "run_at": "document_idle"
     }
   ]
