--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
   "manifest_version": 3,
   "name": "Equality Compass",
-  "version": "0.16.1",
+  "version": "0.16.2",
   "description": "Highlight states on LinkedIn and Indeed job listings with M.A.P. Total Policy Tally or Gender Identity scoring.",
   "permissions": ["storage"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "24": "icon.png",
+      "96": "icon96.png",
 	  "48": "icon48.png"
     }
   },
