--- a/manifest.json
+++ b/manifest.json
@@ -1,29 +1,42 @@
 {
   "manifest_version": 3,
   "name": "Equality Compass",
-  "version": "0.19.2",
+  "version": "0.20.1",
   "description": "Highlight states on LinkedIn and Indeed job listings with M.A.P. Total Policy Tally or Gender Identity scoring.",
-  "permissions": ["storage", "tabs"],
-  "action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "96": "icon96.png",
-	  "48": "icon48.png"
-    }
+  "icons": {
+	  "96": "icons/icon96.png",
+	  "48": "icons/icon48.png"
+  },
+  "background": {
+	"scripts": [
+		"background.js"
+	]
   },
   "content_scripts": [
     {
-      "matches": ["*://*.linkedin.com/jobs*", "*://*.indeed.com/*", "*://*.ziprecruiter.com/*"],
-      "js": ["stateScores.js", "content.js"],
+      "matches": [
+		"*://*.linkedin.com/jobs*",
+		"*://*.indeed.com/*",
+		"*://*.ziprecruiter.com/*"
+	  ],
+      "js": [
+		"stateScores.js",
+		"content.js"
+	  ],
       "run_at": "document_idle"
     }
   ],
+  "action": {
+	"default_title": "Equality Compass",
+    "default_popup": "browserAction/popup.html",
+    "default_icon": {
+      "96": "icons/icon96.png"
+    }
+  },
+  "permissions": ["storage", "tabs"],
   "host_permissions": [
 	"*://*.linkedin.com/*",
 	"*://*.indeed.com/*",
 	"*://*.ziprecruiter.com/*"
-  ],
-  "background": {
-	"scripts": ["background.js"]
-  }
+  ]
 }
