Polyfill - Chrome support
Deployment between the two browsers is one line of code change now:
"scripts": ["background.js"],
to
"service_worker": "background.js"

--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,8 @@
 	  "48": "icons/icon48.png"
   },
   "background": {
-	"scripts": [
-		"background.js"
-	]
+	"scripts": ["background.js"],
+	"type": "module"
   },
   "content_scripts": [
     {
